# serializer version: 1
# name: test_sensors[sensor.technove_station_current]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'current',
      'friendly_name': 'TechnoVE Station Current',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfElectricCurrent.AMPERE: 'A'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.technove_station_current',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '23.75',
  })
# ---
# name: test_sensors[sensor.technove_station_input_voltage]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'voltage',
      'friendly_name': 'TechnoVE Station Input voltage',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfElectricPotential.VOLT: 'V'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.technove_station_input_voltage',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '238',
  })
# ---
# name: test_sensors[sensor.technove_station_last_session_energy_usage]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'TechnoVE Station Last session energy usage',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.technove_station_last_session_energy_usage',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '12.34',
  })
# ---
# name: test_sensors[sensor.technove_station_max_current]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'current',
      'friendly_name': 'TechnoVE Station Max current',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfElectricCurrent.AMPERE: 'A'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.technove_station_max_current',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '24',
  })
# ---
# name: test_sensors[sensor.technove_station_max_station_current]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'current',
      'friendly_name': 'TechnoVE Station Max station current',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfElectricCurrent.AMPERE: 'A'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.technove_station_max_station_current',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '32',
  })
# ---
# name: test_sensors[sensor.technove_station_output_voltage]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'voltage',
      'friendly_name': 'TechnoVE Station Output voltage',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfElectricPotential.VOLT: 'V'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.technove_station_output_voltage',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '238',
  })
# ---
# name: test_sensors[sensor.technove_station_signal_strength]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'signal_strength',
      'friendly_name': 'TechnoVE Station Signal strength',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'dBm',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.technove_station_signal_strength',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '-82',
  })
# ---
# name: test_sensors[sensor.technove_station_status]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'TechnoVE Station Status',
      'options': list([
        'unplugged',
        'plugged_waiting',
        'plugged_charging',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.technove_station_status',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'plugged_charging',
  })
# ---
# name: test_sensors[sensor.technove_station_total_energy_usage]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'TechnoVE Station Total energy usage',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.technove_station_total_energy_usage',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '1234',
  })
# ---
# name: test_sensors[sensor.technove_station_wi_fi_network_name]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'TechnoVE Station Wi-Fi network name',
      'icon': 'mdi:wifi',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.technove_station_wi_fi_network_name',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'Connecting...',
  })
# ---
